--- a/core/static/css/appp.css
+++ b/core/static/css/appp.css
@@ -13,7 +13,7 @@ html, body, h1, h2, h3, h4, h5, h6 {
   /* Smoothing */
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
-  font-smoothing: antialiased;
+  font-smoothing: subpixel-antialised;
   -webkit-font-smoothing: antialiased;
   text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px; }
 
@@ -137,11 +137,11 @@ a, a:hover {
   will-change: transform; }
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-  .img--centered\@medium {
+  .img--centered:medium {
     text-align: center; } }
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  .img--centered\@medium {
+  .img--centered:medium {
     text-align: center; } }
 
 .img__bg {
@@ -173,15 +173,24 @@ a, a:hover {
   -webkit-box-shadow: 10px 10px 13px 0px rgba(0, 0, 0, 0.29);
   -moz-box-shadow: 10px 10px 13px 0px rgba(0, 0, 0, 0.29);
   box-shadow: 10px 10px 13px 0px rgba(0, 0, 0, 0.29); }
+
+.img--main .img__file {
+  cursor: pointer; }
   @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
-    .img__file {
+    .img--main .img__file {
       max-width: 60vw; } }
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-    .img__file {
+    .img--main .img__file {
       max-width: 50vw; } }
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    .img__file {
+    .img--main .img__file {
       max-width: 50vw; } }
+  @media (min-width: 992px) and (max-width: 1199px) {
+    .img--main .img__file {
+      max-width: 35vw; } }
+  @media (min-width: 1200px) {
+    .img--main .img__file {
+      max-width: 35vw; } }
 
 .ctn {
   padding: 0.75em 1em 2.55em 1em; }
@@ -218,27 +227,39 @@ a, a:hover {
 .card--blue .card__content {
   background: #03D8BE; }
 
-.card--right {
+.card--rt {
   text-align: right; }
-  .card--right .card__content {
+  .card--rt .card__content {
     max-width: 17.8125em; }
     @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-      .card--right .card__content {
+      .card--rt .card__content {
         max-width: 22.8125em; } }
     @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-      .card--right .card__content {
+      .card--rt .card__content {
         max-width: 22.8125em; } }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      .card--rt .card__content {
+        max-width: 25.8125em; } }
+    @media (min-width: 1200px) {
+      .card--rt .card__content {
+        max-width: 25.8125em; } }
 
-.card--left {
+.card--lt {
   text-align: left; }
-  .card--left .card__content {
+  .card--lt .card__content {
     max-width: 17.8125em; }
     @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-      .card--left .card__content {
+      .card--lt .card__content {
         max-width: 22.8125em; } }
     @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-      .card--left .card__content {
+      .card--lt .card__content {
         max-width: 22.8125em; } }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      .card--lt .card__content {
+        max-width: 25.8125em; } }
+    @media (min-width: 1200px) {
+      .card--lt .card__content {
+        max-width: 25.8125em; } }
 
 .card__title {
   font-size: 1.5625em;
@@ -302,9 +323,8 @@ textarea.form-group__input {
 
 .ctn__title {
   margin: 1em 0; }
-
-.ctn__title--artifact {
-  margin-bottom: 0; }
+  .ctn__title--artifact {
+    margin-bottom: 0; }
 
 .ctn__subtitle {
   margin-bottom: 2em; }
@@ -325,76 +345,104 @@ textarea.form-group__input {
     text-align: center; }
   .card--comment .card__content {
     text-align: left; }
-
-.card--right .card__content {
-  margin-top: 0.625em;
-  margin-right: -1em; }
+  .card--lt:not(.card--rt\@mobile):not(.card--rt\@computer):not(.card--lt\@mobile):not(.card--lt\@computer) {
+    text-align: left; }
+    .card--lt:not(.card--rt\@mobile):not(.card--rt\@computer):not(.card--lt\@mobile):not(.card--lt\@computer) .card__content {
+      margin-top: 0.625em;
+      margin-left: -1em; }
+  @media (min-width: 0px) and (max-width: 767px) and (orientation: portrait) {
+    .card--lt\@mobile {
+      text-align: right; }
+      .card--lt\@mobile .card__content {
+        margin-top: 0.625em;
+        margin-left: -1em; } }
   @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
-    .card--right .card__content {
-      margin-right: -3em; } }
+    .card--lt\@mobile {
+      text-align: right; }
+      .card--lt\@mobile .card__content {
+        margin-top: 0.625em;
+        margin-left: -1em; } }
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-    .card--right .card__content {
-      margin-right: -3em; } }
+    .card--lt\@mobile {
+      text-align: right; }
+      .card--lt\@mobile .card__content {
+        margin-top: 0.625em;
+        margin-left: -1em; } }
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    .card--right .card__content {
-      margin-right: -3em; } }
-
-.card--left .card__content {
-  margin-top: 0.625em;
-  margin-left: -1em; }
+    .card--lt\@mobile {
+      text-align: right; }
+      .card--lt\@mobile .card__content {
+        margin-top: 0.625em;
+        margin-left: -1em; } }
+  @media (min-width: 992px) and (max-width: 1199px) {
+    .card--lt\@computer {
+      text-align: left; }
+      .card--lt\@computer .card__content {
+        margin-top: 0.625em;
+        margin-left: -1em; } }
+  @media (min-width: 1200px) {
+    .card--lt\@computer {
+      text-align: left; }
+      .card--lt\@computer .card__content {
+        margin-top: 0.625em;
+        margin-left: -1em; } }
+  .card--rt:not(.card--rt\@mobile):not(.card--rt\@computer):not(.card--lt\@mobile):not(.card--lt\@computer) {
+    text-align: right; }
+    .card--rt:not(.card--rt\@mobile):not(.card--rt\@computer):not(.card--lt\@mobile):not(.card--lt\@computer) .card__content {
+      margin-top: 0.625em;
+      margin-right: -1em; }
+  @media (min-width: 0px) and (max-width: 767px) and (orientation: portrait) {
+    .card--rt\@mobile {
+      text-align: right; }
+      .card--rt\@mobile .card__content {
+        margin-top: 0.625em;
+        margin-right: -1em; } }
   @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
-    .card--left .card__content {
-      margin-left: -3em; } }
+    .card--rt\@mobile {
+      text-align: right; }
+      .card--rt\@mobile .card__content {
+        margin-top: 0.625em;
+        margin-right: -1em; } }
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-    .card--left .card__content {
-      margin-left: -3em; } }
+    .card--rt\@mobile {
+      text-align: right; }
+      .card--rt\@mobile .card__content {
+        margin-top: 0.625em;
+        margin-right: -1em; } }
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    .card--left .card__content {
-      margin-left: -3em; } }
+    .card--rt\@mobile {
+      text-align: right; }
+      .card--rt\@mobile .card__content {
+        margin-top: 0.625em;
+        margin-right: -1em; } }
+  @media (min-width: 992px) and (max-width: 1199px) {
+    .card--rt\@computer {
+      text-align: right; }
+      .card--rt\@computer .card__content {
+        margin-top: 0.625em;
+        margin-right: -1em; } }
+  @media (min-width: 1200px) {
+    .card--rt\@computer {
+      text-align: right; }
+      .card--rt\@computer .card__content {
+        margin-top: 0.625em;
+        margin-right: -1em; } }
 
-.card--full-width .card__content {
-  display: block;
-  text-align: center;
-  margin-left: -1em;
-  margin-right: -1em; }
-  @media (min-width: 0px) and (max-width: 767px) and (orientation: landscape) {
-    .card--full-width .card__content {
-      margin-left: -3em;
-      margin-right: -3em; } }
-  @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-    .card--full-width .card__content {
-      margin-left: -3em;
-      margin-right: -3em; } }
-  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    .card--full-width .card__content {
-      margin-left: -3em;
-      margin-right: -3em; } }
-
-.card__title {
-  margin-bottom: 0.55em; }
-
-.new-comment-title {
-  font-size: 1.25rem;
-  margin: 3em 0 1em 0; }
-
-.form-group {
-  margin-bottom: 1em; }
-
-.submit-btn {
-  margin-top: 1.5em;
-  margin-bottom: 1em; }
-  .submit-btn--centered {
-    margin-left: auto;
-    margin-right: auto; }
-
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-  .line\@medium > * {
-    display: inline-block; }
-    .line\@medium > *:last-child {
-      float: right; } }
-
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  .line\@medium > * {
-    display: inline-block; }
-    .line\@medium > *:last-child {
-      float: right; } }
+.flex {
+  display: flex; }
+  .flex--column {
+    flex-direction: column; }
+  .flex--centered {
+    align-items: center; }
+  .flex--column {
+    justify-content: center; }
+  @media (min-width: 992px) and (max-width: 1199px) {
+    .flex\@large {
+      display: flex; } }
+  @media (min-width: 1200px) {
+    .flex\@large {
+      display: flex; } }
+  .flex .flex-ch--half-wt {
+    width: 50%; }
+  .flex .flex-ch--centered {
+    align-self: center; }
