--- a/artifacts/templates/show_artifact_for_user.html
+++ b/artifacts/templates/show_artifact_for_user.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
 
-                <div class="card card--lt card--rt@computer card--brown">
+                <div class="card card--lt@mobile card--rt@computer card--brown">
                     <div class="card__title">
                         <span>Informações</span>
                     </div>
