create artisan page

--- a/artifacts/templates/show_artifact_for_user.html
+++ b/artifacts/templates/show_artifact_for_user.html
@@ -75,8 +75,8 @@
                     </div>
                 </div>
             </div>
-            <div class="">
-                <div class="line@medium">
+
+                <div class="flex@large wt--full align-items-start justify-space-between">
                     <div class="card card--lt card--red">
                         <div class="card__title">
                             <span>Endereço</span>
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+
         </div>
     </section>
 
