--- a/core/static/sass/img.scss
+++ b/core/static/sass/img.scss
@@ -1,11 +1,3 @@
-@each $query in medium, medium-l {
-  @include to($query) {
-    .img--centered:medium {
-      text-align: center;
-    }
-  }
-}
-
 .img__bg {
   padding: 0.6em;
   display: inline-block;
@@ -59,6 +51,28 @@
       @include to($query) {
         max-width: 35vw;
       }
+    }
+  }
+}
+
+.img-grid {
+  display: flex;
+  justify-content: center;
+
+  &__wrapper {
+    display: flex;
+    width: 60vw;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  &__item {
+    display: inline-block;
+    margin: 0 1em;
+
+    img {
+      height: 200px;
+      width: 200px;
     }
   }
 }
